@@ -1,5 +1,11 @@
 Date	Added
 
+2006/08/24
+	* Added setting clear_skills_on_warp to specify when a character's
+	  land-based skills are deleted when the caster changes maps. Defaults to all
+	  types (skill.conf). [Skotlex]
+	* The previous setting now obsoletes traps_setting &2, which now can only
+	  be 0/1. [Skotlex]
 2006/08/21
 	* Removed config setting "muting_players", and expanded the manner_system
 	  config to specify how having negative manner (mute) affects a player (see
